--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,7 +21,7 @@
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4 class="modal-title">Modal Header</h4>
+          <h4 class="modal-title">Modal Header 555</h4>
         </div>
         <div class="modal-body">
          <form class="form-horizontal" role="form" action="/users?flag=0" method="post">
